--- a/src/components/Styles/style.css
+++ b/src/components/Styles/style.css
@@ -1,6 +1,6 @@
 :root {
 	--cream: #eeeedd;
-	--red: #ff2255;
+	--red: #fa87a2;
 	--dark: #444444;
 	--lightgrey: #5e5e5e;
 }
@@ -15,12 +15,12 @@ body {
     font-family: 'Roboto', sans-serif;
     min-height: 100vh;
     position: relative;
-    background: linear-gradient(to right, #232526, #414345);
+    background: linear-gradient(to right, #eeeedd, #dcdccc);
 
 }
 
 header {
-    background: linear-gradient(to right, #232526, #414345);
+    background: linear-gradient(to right, #eeeedd, #dcdccc);
     position: fixed;
     width: 100%;
     min-height: 80px;
@@ -32,7 +32,7 @@ header {
   header div {
     display: inline-flex;
     padding: 1rem 0 1rem 2rem;
-    color: white;
+    color: black;
     font-size: 40px;
     height: 80px;
 
@@ -48,7 +48,7 @@ header {
 
   #link-navbar {
     font-size: 20px;
-    color: white;
+    color: black;
     width: 50%;
     margin: auto;
     text-decoration: none;
@@ -66,12 +66,12 @@ header {
     margin: 5px auto;
     -webkit-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-    background-color: white;
+    background-color: black;
 }
 
   #home-page-grid {
     padding-top: 80px;
-    background: linear-gradient(to right, #232526, #414345);
+    background: linear-gradient(to right, #eeeedd, #dcdccc);
     text-align: center;
     overflow: auto;
     padding-bottom: 2.5rem;
@@ -81,14 +81,14 @@ header {
     font-size: 3rem;
     margin-top: 1rem;
     margin-bottom: 1rem;
-    color: white;
+    color: black;
     text-align: center;
     font-family: 'Roboto', sans-serif;
   }
   
   .banner-text h2 {
     font-size: 2em;
-    color: white;
+    color: black;
     margin-bottom: 1rem;
     text-align: center;
     font-family: 'Roboto', sans-serif;
@@ -101,7 +101,7 @@ header {
   }
   
   .banner-text p {
-    color: white;
+    color: black;
     font-size: 20px;
     padding: 2rem;
     font-family: 'Roboto', sans-serif;
@@ -126,14 +126,14 @@ header {
 }
 
 .about {
-    background: linear-gradient(to right, #232526, #414345);
+    background: linear-gradient(to right, #eeeedd, #dcdccc);
     display: flex;
 	flex: wrap;
 	flex-direction: row;
 	padding: 2.5rem;
 	margin: 0 auto;
     padding-top: 80px;
-    color: white;
+    color: black;
 }
 
 .about-txt {
@@ -183,10 +183,10 @@ header {
 }
 
 .project, .resume, .contact {
-    background: linear-gradient(to right, #232526, #414345);
+    background: linear-gradient(to right, #eeeedd, #dcdccc);
 	padding: 2.5rem;
     padding-top: 80px;
-    color: white;
+    color: black;
     margin: 0 auto;
 }
 
@@ -257,7 +257,7 @@ input[type=submit] {
 }
 
 footer {
-    background: linear-gradient(to right, #232526, #414345);
+    background: linear-gradient(to right, #eeeedd, #dcdccc);
     position: absolute;
     bottom: 0;
     width: 100%;
