--- a/src/components/Styles/style.css
+++ b/src/components/Styles/style.css
@@ -12,7 +12,9 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
     min-height: 100vh;
     position: relative;
     background: white;
@@ -83,7 +85,9 @@ header {
     margin-bottom: 1rem;
     color: black;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   }
   
   .banner-text h2 {
@@ -91,7 +95,9 @@ header {
     color: black;
     margin-bottom: 1rem;
     text-align: center;
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   }
   
   .banner-text hr {
@@ -104,7 +110,9 @@ header {
     color: black;
     font-size: 20px;
     padding: 2rem;
-    font-family: 'Roboto', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   }
 
   .avatar-img {
@@ -239,7 +247,7 @@ header {
 }
 
 .CVlink {
-    color: red;
+    color: #ff88fe;
 }
 
 input[type=text], textarea {
@@ -280,7 +288,7 @@ footer h3 {
 
 /* ALL HOVER STYLES */
 input[type=submit]:hover {
-	background-color: darkred;
+	background-color: #ff88fe;
 }
 
 .card-image:hover, .gitRepo:hover, .icon-img:hover {
