--- a/src/components/Styles/style.css
+++ b/src/components/Styles/style.css
@@ -39,6 +39,19 @@ header {
     height: 80px;
 
   }
+
+  a:link {
+    color: black;
+    text-decoration: none;
+  }
+
+  a:visited {
+    color: black;
+  }
+
+  a:hover {
+    color:#ff88fe;
+  }
   
   #navBar {
     display: flex;
@@ -215,6 +228,7 @@ header {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	gap: 2rem;
+
 }
 
 .card, .main-project {
