--- a/src/components/Styles/style.css
+++ b/src/components/Styles/style.css
@@ -1,379 +1,395 @@
 :root {
-	--cream: #eeeedd;
-	--red: #ff88fe;
-	--dark: #444444;
-	--lightgrey: #e0dede;
+  --cream: #eeeedd;
+  --red: #ff88fe;
+  --dark: #444444;
+  --lightgrey: #e0dede;
 }
 
 * {
-	box-sizing: border-box;
-	margin: 0;
-	padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-    min-height: 100vh;
-    position: relative;
-    background: white;
+  min-height: 100vh;
+  position: relative;
+  background: white;
 
 }
 
 header {
-    background: white;
-    position: fixed;
-    width: 100%;
-    min-height: 80px;
-    max-height: 1000px;
-    z-index: 3;
-    box-shadow: 0 2px 2px;
-  }
+  background: white;
+  position: fixed;
+  width: 100%;
+  min-height: 80px;
+  max-height: 1000px;
+  z-index: 3;
+  box-shadow: 0 2px 2px;
+}
 
-  header div {
-    display: inline-flex;
-    padding: 1rem 0 1rem 2rem;
-    color: black;
-    font-size: 40px;
-    height: 80px;
+header div {
+  display: inline-flex;
+  padding: 1rem 0 1rem 2rem;
+  color: black;
+  font-size: 40px;
+  height: 80px;
 
-  }
+}
 
-  a:link {
-    color: black;
-    text-decoration: none;
-  }
+a:link {
+  color: black;
+  text-decoration: none;
+}
 
-  a:visited {
-    color: black;
-  }
+a:visited {
+  color: black;
+}
 
-  a:hover {
-    color:#ff88fe;
-  }
-  
-  #navBar {
-    display: flex;
-    flex-direction: row;
-    height: 80px;
-    float: right;
-    padding-right: 1rem;
-  }
+a:hover {
+  color: #ff88fe;
+}
 
-  #link-navbar {
-    font-size: 20px;
-    color: black;
-    width: 50%;
-    margin: auto;
-    text-decoration: none;
-    padding: 1rem;
-  }
+#navBar {
+  display: flex;
+  flex-direction: row;
+  height: 80px;
+  float: right;
+  padding-right: 1rem;
+}
 
-  .hamburger {
-	display: none;
+#link-navbar {
+  font-size: 20px;
+  color: black;
+  width: 50%;
+  margin: auto;
+  text-decoration: none;
+  padding: 1rem;
+}
+
+.hamburger {
+  display: none;
 }
 
 .bar {
-	display: block;
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background-color: black;
+  display: block;
+  width: 25px;
+  height: 3px;
+  margin: 5px auto;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  background-color: black;
 }
 
-  #home-page-grid {
-    padding-top: 80px;
-    background: white;
-    text-align: center;
-    overflow: auto;
-    padding-bottom: 2.5rem;
-  }
+#home-page-grid {
+  padding-top: 80px;
+  background: white;
+  text-align: center;
+  overflow: auto;
+  padding-bottom: 2.5rem;
+}
 
-  .banner-text h1 {
-    font-size: 3rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    color: black;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+.banner-text h1 {
+  font-size: 3rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  color: black;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  }
-  
-  .banner-text h2 {
-    font-size: 2em;
-    color: black;
-    margin-bottom: 1rem;
-    text-align: center;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+}
+
+.banner-text h2 {
+  font-size: 2em;
+  color: black;
+  margin-bottom: 1rem;
+  text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  }
-  
-  .banner-text hr {
-    border-top: 5px dotted-white;
-    width: 50%;
-    margin: auto;
-  }
-  
-  .banner-text p {
-    color: black;
-    font-size: 20px;
-    padding: 2rem;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+}
+
+.banner-text hr {
+  border-top: 5px dotted-white;
+  width: 50%;
+  margin: auto;
+}
+
+.banner-text p {
+  color: black;
+  font-size: 20px;
+  padding: 2rem;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  }
+}
 
-  .avatar-img {
-    max-height: 350px;
-    padding-top: 2.5rem;
-    max-width: 50%;
-  }
+.avatar-img {
+  max-height: 350px;
+  padding-top: 2.5rem;
+  max-width: 50%;
+}
 
-  .avatar1-img {
-    max-height: 200px;
-    padding-top: 2.5rem;
-    max-width: 50%;
-    border-radius: 55%;
-  }
+.avatar1-img {
+  max-height: 200px;
+  padding-top: 2.5rem;
+  max-width: 50%;
+  border-radius: 55%;
+}
 
-  .icons {
-	display: inline-flex;
-	text-align: center;
+.icons {
+  display: inline-flex;
+  text-align: center;
 }
 
 .icon-img {
-	max-width: 150px;
-	text-align: center;
-	padding: 0 3rem 2rem 2rem;
-    justify-content: space-between;
+  max-width: 150px;
+  text-align: center;
+  padding: 0 3rem 2rem 2rem;
+  justify-content: space-between;
 }
 
 .about {
-    background: white;
-    display: flex;
-	flex: wrap;
-	flex-direction: row;
-	padding: 2.5rem;
-	margin: 0 auto;
-    padding-top: 80px;
-    color: black;
+  background: white;
+  display: flex;
+  flex: wrap;
+  flex-direction: row;
+  padding: 2.5rem;
+  margin: 0 auto;
+  padding-top: 80px;
+  color: black;
 }
 
 .about-txt {
-    padding-right: 2rem;
- 
+  padding-right: 2rem;
+
 }
 
 .about h1 {
-	padding-bottom: 2rem;
-    padding-top: 2rem;
-    font-size: 40px;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  font-size: 40px;
 }
 
 .intro {
-	font-size: 1.6rem;
-	margin-bottom: 1.2rem;
-	line-height: 1.3;
-	font-weight: 600;	
+  font-size: 1.6rem;
+  margin-bottom: 1.2rem;
+  line-height: 1.3;
+  font-weight: 600;
 }
 
 .description {
-	font-size: 1.3rem;
-	line-height: 1.3;
+  font-size: 1.3rem;
+  line-height: 1.3;
 }
 
 .photo {
-	display: flex; 
-    padding-top: 2rem;
+  display: flex;
+  padding-top: 2rem;
 }
 
 .photo-me {
-	box-shadow: 0 0 1px;
-	margin: auto;
-	border-radius: 1rem;
-	display: flex;
-	border: 2px solid var(--red);
-	min-width: 100px;
-    max-width: 400px;
+  box-shadow: 0 0 1px;
+  margin: auto;
+  border-radius: 1rem;
+  display: flex;
+  min-width: 100px;
+  max-width: 400px;
 }
 
 .card-image {
-	width: 100%;
-	display: flex;
-	border-radius: 2rem 2rem 0 0;
-    /* border-bottom: 1px solid red; */
-    box-shadow: 0 1px 3px var(--red);
+  width: 100%;
+  display: flex;
+  border-radius: 2rem 2rem 0 0;
+  /* border-bottom: 1px solid red; */
+  box-shadow: 0 1px 3px var(--red);
 }
 
-.project, .resume, .contact {
-    background: white;
-	padding: 2.5rem;
-    padding-top: 80px;
-    color: black;
-    margin: 0 auto;
+.project,
+.resume,
+.contact {
+  background: white;
+  padding: 2.5rem;
+  padding-top: 80px;
+  color: black;
+  margin: 0 auto;
 }
 
-.project h1, .resume h1, .contact h1 {
-	padding-bottom: 2rem;
-    padding-top: 2rem;
-    font-size: 40px;
+.project h1,
+.resume h1,
+.contact h1 {
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  font-size: 40px;
 }
+
 /* PROJECT CARDS GRID */
 .cards {
-	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-	gap: 2rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+  gap: 2rem;
 
 }
 
-.card, .main-project {
-	box-shadow: 0 0 6px var(--lightgrey);
-	background-color: var(--lightgrey);
-	border-radius: 2rem;
-	border: 1px solid var(--red);
+.card,
+.main-project {
+  box-shadow: 0 0 6px var(--lightgrey);
+  background-color: var(--lightgrey);
+  border-radius: 2rem;
+  border: 1px solid var(--red);
 }
 
 .card-info {
-	padding: 1rem;
+  padding: 1rem;
 }
 
 .tech-repo {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .gitRepo {
-    max-width: 50px;
-    padding-left: 1rem;
-    vertical-align: middle;
-    
+  max-width: 50px;
+  padding-left: 1rem;
+  vertical-align: middle;
+
 }
 
 /* EMAIL ME FORM STYLING */
 .form h2 {
-	margin-bottom: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .CVlink {
-    color: #ff88fe;
+  color: #ff88fe;
 }
 
-input[type=text], textarea {
-	width: 100%;
-	padding: 1rem;
-	border: 1px solid var(--red);
-	border-radius: 1rem;
-	box-sizing: border-box;
-	margin: 0.5rem 0 1rem 0;
-	resize: vertical;
-	background-color: var(--cream);
+::placeholder {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
+
+input[type=text],
+textarea {
+  width: 100%;
+  padding: 1rem;
+  border: 1px solid var(--red);
+  border-radius: 1rem;
+  box-sizing: border-box;
+  margin: 0.5rem 0 1rem 0;
+  resize: vertical;
+  background-color: var(--lightgrey);
 }
 
 input[type=submit] {
-	background-color: var(--red);
-	color: var(--dark);
-	padding: 0.5rem;
-	border: none;
-	box-shadow: 0 0 6px var(--lightgrey);
-	border-radius: 0.5rem;
-	cursor: pointer;
+  background-color: var(--red);
+  color: var(--dark);
+  padding: 0.5rem;
+  border: none;
+  box-shadow: 0 0 6px var(--lightgrey);
+  border-radius: 0.5rem;
+  cursor: pointer;
 }
 
 footer {
-    background: white;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem;
-    padding-top: 2rem;
+  background: white;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;
+  padding-top: 2rem;
 }
 
 footer h3 {
-    margin: auto;
-	text-align: center;
-	opacity: 0.3;
+  margin: auto;
+  text-align: center;
+  opacity: 0.3;
 }
 
 /* ALL HOVER STYLES */
 input[type=submit]:hover {
-	background-color: #ff88fe;
+  background-color: #fcc4fc;
 }
 
-.card-image:hover, .gitRepo:hover, .icon-img:hover {
-	opacity: 0.7;
+.card-image:hover,
+.gitRepo:hover,
+.icon-img:hover {
+  opacity: 0.7;
 }
 
 #link-navbar:hover {
-    opacity: 0.7;
+  opacity: 0.7;
 }
 
 @media screen and (max-width: 600px) {
-    #link-navbar {
-        font-size: 15px;
-        padding: 0.5rem;
-    }
-}
-@media  screen and (max-width: 480px) {
-	#navBar {
-		position: fixed;
-        left: -100%;
-        flex-direction: column;
-        background: white;
-        width: 100%;
-        height: 25vh;
-        border-radius: 0 0 10px 10px;
-        text-align: center;
-        transition: 0.3s;
-        box-shadow:
-            0 10px 27px rgba(0, 0, 0, 0.05);
-	}
-
-	#navBar.active {
-		left: 0;
-	}
-
-	#link-navbar {
-		padding: 0rem;
-	}
-
-	.hamburger {
-		display: block;
-		cursor: pointer;
-        float: right;
-        padding-right: 2rem;
-        padding-top: 1.5rem;
-	}
-
-	.hamburger.active .bar:nth-child(2) {
-        opacity: 0;
-    }
-
-    .hamburger.active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-
-    .hamburger.active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
+  #link-navbar {
+    font-size: 15px;
+    padding: 0.5rem;
+  }
 }
 
-@media  screen and (max-width: 420px) {
-    .icon-img {
-        max-width: 150px;
-	    text-align: center;
-	    padding: 0 2rem 1rem 1rem;
-        justify-content: space-between;
-    }
+@media screen and (max-width: 480px) {
+  #navBar {
+    position: fixed;
+    left: -100%;
+    flex-direction: column;
+    background: white;
+    width: 100%;
+    height: 25vh;
+    border-radius: 0 0 10px 10px;
+    text-align: center;
+    transition: 0.3s;
+    box-shadow:
+      0 10px 27px rgba(0, 0, 0, 0.05);
+  }
+
+  #navBar.active {
+    left: 0;
+  }
+
+  #link-navbar {
+    padding: 0rem;
+  }
+
+  .hamburger {
+    display: block;
+    cursor: pointer;
+    float: right;
+    padding-right: 2rem;
+    padding-top: 1.5rem;
+  }
+
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
 }
+
+@media screen and (max-width: 420px) {
+  .icon-img {
+    max-width: 150px;
+    text-align: center;
+    padding: 0 2rem 1rem 1rem;
+    justify-content: space-between;
+  }
+}
+
 @media screen and (max-width: 900px) {
-	.about {
-		flex-direction: column;
-		justify-content: center;
-	}
+  .about {
+    flex-direction: column;
+    justify-content: center;
+  }
 }
